--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,20 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header class="header">
+    <button>Projects</button>
+  </header>
+  <main class="board">
+    <div class="add-project">
+      Add project
+    </div>
+  </main>
+  <dialog class="add-project-dialog">
+    <form action="">
+      <label for="project-name">Project Name</label>
+      <input type="text" id="project-name" name="project-name">
+      <button type="submit">Add Project</button>
+    </form>
+  </dialog>
 </body>
 </html>
