--- a/src/template.html
+++ b/src/template.html
@@ -9,14 +9,17 @@
 </head>
 <body>
   <header class="header">
-    <button>Projects</button>
+    <a href="">Projects</a>
   </header>
   <main class="board">
-    <div class="add-project">
-      Add project
+    <div class="projects">
+      <div class="add-project">+ add project</div>
+    </div>
+    <div class="project">
+
     </div>
   </main>
-  <dialog class="add-project-dialog">
+  <dialog class="add-project-dialog none-display">
     <form action="">
       <label for="project-name">Project Name</label>
       <input type="text" id="project-name" name="project-name">
