add basic list and card functionality to project view
- Create modules/project.js with List and Card classes
- Allow visually adding new lists and cards within a project
- Implement editable list titles and card descriptions
- Style project board, lists, and cards for horizontal scrolling
- Show project view when a project is selected, hide when returning to projects

--- a/src/template.html
+++ b/src/template.html
@@ -15,8 +15,8 @@
     <div class="projects">
       <div class="add-project">+ add project</div>
     </div>
-    <div class="project">
-
+    <div class="project none-display">
+      <div class="add-list">+ add list</div>
     </div>
   </main>
   <dialog class="add-project-dialog none-display">
