Add card modal for viewing card details
- Implement CardModalManager to handle modal open/close logic
- Add card modal dialog to template.html for displaying card details
- Update DOMManager to reference card modal elements
- Update Card model to open modal with card description on click

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,9 @@
     <div class="project none-display">
       <div class="add-list">+ add list</div>
     </div>
+    <dialog class="card-modal none-display">
+      <div></div>
+    </dialog>
   </main>
   <dialog class="add-project-dialog none-display">
     <form action="">
