add buttons to card modal

--- a/src/template.html
+++ b/src/template.html
@@ -37,6 +37,9 @@
             </select>
           </div>
         </menu>
+        <div class="card-details">
+          
+        </div>
       </div>
     </dialog>
   </main>
