add due-date support

--- a/src/template.html
+++ b/src/template.html
@@ -38,7 +38,14 @@
           </div>
         </menu>
         <div class="card-details">
-          
+          <header class="card-details-header">
+            <h3></h3>
+            <h3></h3>
+          </header>
+        </div>
+        <div class="buttons">
+          <button>Save</button>
+          <button>Cancel</button>
         </div>
       </div>
     </dialog>
