keep currentCard & sync modal edits to project
Introduce a `currentCard` reference so modal edits operate on the in-memory
card instance and are synced back to the project's persisted data on Save.
Also make the card title editable in the modal and add small UX/validation tweaks.

- Add `this.currentCard` to CardModalManager and set it when opening a card.
- Make card title editable in the modal (`<h3 contenteditable="true">`) and prevent Enter from inserting newlines.
- On Save, sync modal description/dueDate/checklists into `this.currentCard`, update the matching card inside the current project's data structure, then call `persistenceManager.updateProjects(currentProject)`.
- Reset `currentCard` when closing the modal.

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,7 @@
         </menu>
         <div class="card-details">
           <header class="card-details-header">
-            <h3></h3>
+            <h3 contenteditable="true"></h3>
             <h3></h3>
           </header>
         </div>
