add notes field support to card modal
- Add notes textarea to card modal template and styling
- Implement notes persistence in Card model, CardModalManager, and ProjectsManager
- Update DOMManager to reference card notes elements
- Sync notes between modal, in-memory card data, and project persistence

--- a/src/template.html
+++ b/src/template.html
@@ -42,6 +42,9 @@
             <h3 contenteditable="true"></h3>
             <h3></h3>
           </header>
+          <section class="card-notes">
+            <textarea placeholder="Add notes..."></textarea>
+          </section>
         </div>
         <div class="buttons">
           <button>Save</button>
