--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header class="header">
