implement persistent card deletion from modal
- Replace "Cancel" button with "Delete" in card modal and update DOMManager references
- Add #deleteCard method to CardModalManager to remove card from both UI and project data
- Ensure card is removed from the correct list in the current project and persist changes
- Update modal event listeners to trigger card deletion
- Minor: persist notes field on save and clean up modal close logic

--- a/src/template.html
+++ b/src/template.html
@@ -49,7 +49,7 @@
         </div>
         <div class="buttons">
           <button>Save</button>
-          <button>Cancel</button>
+          <button>Delete</button>
         </div>
       </div>
     </dialog>
